# aicli-companion

./: .env.example  .gitignore  .lintstagedrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HTTP_APNS_ARCHITECTURE.md  LICENSE  README.md  STATELESS_ARCHITECTURE_SUMMARY.md  USER_TESTING_NOTES.md  USER_TEST_NOTES.md  ios-test-coverage-plan.md  package-lock.json  package.json  plan.md  quick_fixes_1.plan  test-auth.sh
.claude/: settings.local.json
.github/: dependabot.yml
.husky/: pre-commit
AICLICompanionCore/: Package.swift
docs/: ARCHITECTURE.md  FEATURES.md  MANUAL_TESTING_GUIDE.md  README.md  SECURITY.md  deployment.md  websocket-protocol.md
existing-project/: README.md  index.js  package.json
icon-update/: clear-caches.sh  generate-icons.sh  generate-macos-icons.sh  generate-macos-simple.sh
ios/: .swiftlint.yml  BACKGROUND_SESSION_TEST_PLAN.md  BUILD_INSTRUCTIONS.md  Package.swift  README.md  add_entitlements.sh  plan.md  project.yml  test_compile.swift
issues/: 083025-34-enhanced-auto-response.md  083025-7-claude-environment.md  090725-1-broken-documentation-links.md  090906-3-thinking-response-ui-scrolling.md  090925-1-response-timeout-apns-failures.md  091025-2-project-creation-bug.md  091025-3-apns-message-field-critical.md  091225-1-missing-thinking-indicator-queued-messages.md  091225-10-missing-notifications.md  091225-11-project-list-refresh.md  091225-12-unsent-message-loss.md  091225-13-ipad-badge-clearing.md  091225-14-message-delivered-but-chat-stuck-thinking.md  091225-2-auto-reply-ui-showing-when-disabled.md  091225-3-revisit-dangerous-flag-restrictions.md  091225-4-settings-overhaul.md  091225-5-chat-ui-instability.md  091225-6-app-reload-lockout.md  091225-7-ipad-keyboard-bug.md  091225-8-planning-mode-persistence.md  091225-9-keyboard-dismissal.md  1-project-status-indicator.md  10-clickable-file-links.md  13-convo-load.md  15-attachment-ui-cutoff.md  15-settings-navigation.md  17-hide-incomplete.md  19-network-qr.md  2-cloudkit-integration.md  2-cloudkit-sync-device-coordination.md  21-connect-status.md  22-root-directory-chat.md  23-duplicate-messages.md  24-attachments-session.md  (+34 more)
server/desktop/src-tauri/: Cargo.toml  tauri.conf.json
server/desktop/src-tauri/capabilities/: default.json
server/desktop/src-tauri/src/: main.rs
server/hostapp/src-tauri/: Cargo.toml  tauri.conf.json
server/hostapp/src-tauri/icons/: generate-icons.sh  icon.icns  update-icon.py
server/hostapp/src-tauri/src/: lib.rs  main.rs
(+835 files in other folders)
