[package]
name = "aicli-companion-hostapp"
version = "0.1.0"
description = "Desktop UI for AICLI Companion Server"
authors = ["AICLI Companion Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.5"
chrono = "0.4"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
wiremock = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", tag = "0.20.12" }

